# md-project-editor

./: Cargo.toml  README.md
src/: ai.rs  app.rs  citation_completion.rs  editor.rs  file_ops.rs  main.rs  preview.rs  sidebar.rs  sync_scroll.rs
src/vim/: commands.rs  mod.rs  motions.rs  operators.rs
tpls/: eu-template-reference.docx  eu-template-reference.tex
