[package]
name = "agentic-md"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_12"] }
sourceview5 = { version = "0.11", features = ["gtk_v4_12"] }
webkit6 = "0.6"
pulldown-cmark = "0.12"
glib = "0.22"
libadwaita = { version = "0.9", features = ["v1_4"] }
walkdir = "2.5.0"
nvim-rs = { version = "0.9.2", features = ["use_tokio"] }
async-trait = "0.1"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
rmpv = "1.3.1"
futures = "0.3.32"
